--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sim-ai",
   "version": "0.1.0",
-  "homepage": "https://jwoo1127.github.io/",
+  "homepage": "https://jwoo-chn.github.io/jwoo.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
